# iTunesDB-Parser

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
docs/: VolumeIcon.icns
ipod_tone_player/: Beep.tone  Cargo.toml  README.md  mobo_tone_player.sh
ipod_tone_player/src/: main.rs
itunesdb-doc/: README.md
itunesdb_docs/: README.md  iPod Linux RTXC manual.pdf.txt
itunesdb_parser/: Cargo.toml
mediawiki-backup/: ITunesDB - wikiPodLinux.html
parser/: .gitignore  Cargo.toml
parser/src/: equalizer.rs  helpers.rs  itunesdb.rs  itunesdb_constants.rs  itunesdb_helpers.rs  itunesdb_parser.rs  itunesprefs.rs  itunesprefs_constants.rs  itunessd.rs  main.rs  photo_database.rs  photo_database_constants.rs  playcounts.rs  playcounts_constants.rs  playcounts_parser.rs  preferences.rs  preferences_constants.rs
parser/src/constants/: deviceinfo_constants.rs  equalizer_constants.rs  itunesdb_constants.rs  itunessd_3g_constants.rs  itunessd_constants.rs  photofolderalbums_constants.rs  playcounts_constants.rs  preferences_constants.rs
parser/src/helpers/: helpers.rs  itunesdb_helpers.rs
parser/src/parsers/: deviceinfo_parser.rs  equalizer_parser.rs  itunesdb_parser.rs  itunessd_3g_parser.rs  itunessd_parser.rs  photo_type_parser.rs  playcounts_parser.rs  preferences_parser.rs
sample-files/: .gitignore  2005-10-06_DeviceInfo  2010-08-18_Photo-Database-3  2010-08-28_Photo-Database-5  2010-11-16_Photo-Database-4  2023-06-26_itunes_db  2023-08-29_ArtworkDB  2023-08-29_PhotosFolderAlbums  2023-08-29_PlayCounts  2023-08-29_iTunesDB  2023-08-29_iTunesPrefs  (+4 more)
(+70 files in other folders)
