[package]
name = "ipod_tone_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# For sound playback
rodio = "0.17.3"

# For saving to WAV file
hound = "3.5.1"

# GUI
egui = "0.25.0"
eframe = "0.25.0"

# File picker dialog
egui_file = "0.14.0"