[package]
name = "itunesdb_parser"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
chrono = { version = "0.4.31", features = ["serde"] } # Add serde feature
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Languages parsing
isolang = "2.4.0"
